Fixed alignment of text with the 'hold' or 'reserve' buttons in access tab. refs #484

--- a/vufind/themes/thulb/less/thulb.less
+++ b/vufind/themes/thulb/less/thulb.less
@@ -1291,9 +1291,26 @@ form#newpassword .form-group.flex-center {
 }
 
 .access-tab .availability-status {
-  line-height: 2.1;
+  dd {
+    margin-left: 0;
+  }
+
+  dt {
+    margin-right: 20px;
+  }
+
+  dt > *,
+  dd > * {
+    vertical-align: middle;
+  }
 
   .btn.btn-xs {
     font-size: 14px;
+  }
+}
+
+@media (max-width: 767px) {
+  .access-tab .availability-status.flex-center {
+    display: block;
   }
 }
